<resources>
    <string name="app_name">나만의 다이어리</string>
    <string name="login_activity">로그인</string>
    <string name="register_activity">회원가입</string>
    <string name="main_activity">메인화면</string>
    <string name="write_activity">작성</string>
    <string name="detail_activity">상세화면</string>
    <string name="prefedit_activity">설정</string>
    <string name="update_activity">수정</string>
    <string name="user_activity">수정 및 탈퇴</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">메인화면</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title">설정</string>
    <string name="nav_view_list_title">다이어리 리스트</string>
    <string name="nav_view_user_title">사용자 정보 수정</string>
    <string name="new_id">새로운 아이디</string>
    <string name="new_pw">새로운 비밀번호</string>
    <string name="out_text">계정 탈퇴</string>
    <string name="modify_button">수정 완료</string>
    <string name="write_title">제목</string>
    <string name="write_content">내용</string>
    <string name="write_button">작성 완료</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="day">2018-07-08</string>
    <string name="logout">로그아웃</string>
</resources>
