<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="360"
    tools:context=".controllers.activities.WriteActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/write_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="280"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/write_content"
        android:gravity="top"
        android:lines="40"
        android:inputType="text" />

    <Button
        android:id="@+id/writeButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/write_button"
        android:textSize="25sp"
        android:elevation="5dp"/>

</LinearLayout>