<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="360"
    tools:context=".controllers.activities.RegisterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:weightSum="360"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="130"
            tools:ignore="NestedWeights" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:src="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_weight="90"
            android:layout_height="match_parent"
            android:elevation="5dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:hint="@string/id"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:hint="@string/pw"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:hint="@string/pw_check"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:elevation="5dp"/>

</LinearLayout>